aws-emr-experiment/cf.yml
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  DeploymentBucketName:
    Type: String
  Ec2KeyName:
    Type: String

Outputs:
  ClusterId:
    Value: !Ref DummyEmrCluster
  MasterPublicDNS:
    Value: !GetAtt DummyEmrCluster.MasterPublicDNS

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  VpcSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.1.0.0/24

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  PublicRouteViaIgwRoute:
    Type: AWS::EC2::Route
    DependsOn: VpcGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  VpcSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VpcSubnet
      RouteTableId: !Ref RouteTable

  PublicSshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow anyone to SSH
      VpcId: !Ref Vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0

  DummyEmrCluster:
    Type: AWS::EMR::Cluster
    Properties:
      Name: MyDummyEmrCluster
      ReleaseLabel: emr-5.16.0
      LogUri: !Sub "s3://${DeploymentBucketName}/"
      ServiceRole: !Ref DummyEmrClusterServiceRole
      JobFlowRole: !Ref DummyEmrClusterEc2InstanceProfile
      Instances:
        Ec2KeyName: !Ref Ec2KeyName
        Ec2SubnetId: !Ref VpcSubnet
        AdditionalMasterSecurityGroups:
        - !Ref PublicSshSecurityGroup
        MasterInstanceGroup:
          InstanceCount: 1
          InstanceType: m1.medium
          Market: ON_DEMAND
          Name: DummyEmrCluster-Master
        CoreInstanceGroup:
          InstanceCount: 1
          InstanceType: m1.medium
          Market: ON_DEMAND
          Name: DummyEmrCluster-Core
      Applications:
      # http://docs.aws.amazon.com/emr/latest/ReleaseGuide/emr-release-components.html
      - Name: Hadoop
      - Name: Hive

  DummyEmrClusterEc2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: MyDummyEmrClusterEc2InstanceRole
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          Effect: Allow
          Principal:
            Service: ec2.amazonaws.com
          Action: sts:AssumeRole
      Path: /
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AmazonElasticMapReduceforEC2Role

  DummyEmrClusterEc2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: MyDummyEmrClusterEc2InstanceProfile
      Path: /
      Roles:
      - !Ref DummyEmrClusterEc2InstanceRole

  DummyEmrClusterServiceRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: MyDummyEmrClusterServiceRole
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          Effect: Allow
          Principal:
            Service: elasticmapreduce.amazonaws.com
          Action: sts:AssumeRole
      Path: /
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AmazonElasticMapReduceRole

  DummyTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: DummyTable
      AttributeDefinitions:
      - AttributeName: id
        AttributeType: S
      KeySchema:
      - AttributeName: id
        KeyType: HASH
      ProvisionedThroughput:
        ReadCapacityUnits: 1
        WriteCapacityUnits: 1
